--- a/Survey Data Cleaning.Rmd
+++ b/Survey Data Cleaning.Rmd
@@ -14,6 +14,7 @@ library(broom)
 library(data.table)
 library(formattable)
 library(gridExtra)
+library(DataCombine)
 survey <- read_csv("~/Documents/Trans_ED_Research/Trans ED Research/Trans ED Questionnaire_October 9, 2020_16.23.csv")
 ```
 ```{r, choose columns}
@@ -22,52 +23,74 @@ compressed_survey <- survey %>%
   slice(16:585)
 ```
 
-
 ```{r, rename columns}
 renamed_columns <- compressed_survey %>%
-  rename(trans = Q51) %>%
-  rename(gender = Q86) %>%
-  rename(sex = Q10) %>%
-  rename(binary = Q87) %>%
-  rename(know_age = Q88) %>%
-  rename(transition_age = Q89) %>%
-  rename(past_affirm = Q90) %>%
-  rename(future_affirm = Q100) %>%
-  rename(pride = Q71) %>%
-  rename(psych_dx = Q35) %>%
-  rename(psych_selfid = Q36) %>%
-  rename(stress = Q37) %>%
-  rename(ED_dx = Q38) %>%
-  rename(ED_selfid = Q40) %>%
-  rename(ED_care = Q41) %>%
-  rename(ED_transcomp = Q42) %>%
-  rename(behav_ever = Q48) %>%
-  rename(behav_28 = Q50) %>%
-  rename(limit_amount = Q74) %>%
-  rename(long_periods = Q71_1) %>%
-  rename(exclude = Q72) %>%
-  rename(rules = Q73) %>%
-  rename(overeat = Q75) %>%
-  rename(vomit = Q76) %>%
-  rename(laxatives = Q77) %>%
-  rename(exercise = Q78) %>%
-  rename(hormones = Q79) %>%
-  rename(nonmed_trans = Q69) %>%
-  rename(bathroom = Q43) %>%
-  rename(clothes = Q44) %>%
-  rename(messaging = Q45) %>%
-  rename(part_community = Q92) %>%
-  rename(community_support = Q21) %>%
-  rename(age = Q1) %>%
-  rename(race = Q2) %>%
-  rename(lang = Q3) %>%
-  rename(class = Q5) %>%
-  rename(insurance = Q6) %>%
-  rename(region = Q7) %>%
-  rename(devo_environ = Q8) %>%
-  rename(religion = Q9) %>%
-  rename(attraction = Q13) %>%
-  rename(edu = Q15) %>%
-  rename(disability = Q4)
+  dplyr::rename(trans = Q51) %>%
+  dplyr::rename(gender = Q86) %>%
+  dplyr::rename(sex = Q10) %>%
+  dplyr::rename(binary = Q87) %>%
+  dplyr::rename(know_age = Q88) %>%
+  dplyr::rename(transition_age = Q89) %>%
+  dplyr::rename(past_affirm = Q90) %>%
+  dplyr::rename(future_affirm = Q100) %>%
+  dplyr::rename(pride = Q71) %>%
+  dplyr::rename(psych_dx = Q35) %>%
+  dplyr::rename(psych_selfid = Q36) %>%
+  dplyr::rename(stress = Q37) %>%
+  dplyr::rename(ED_dx = Q38) %>%
+  dplyr::rename(ED_selfid = Q40) %>%
+  dplyr::rename(ED_care = Q41) %>%
+  dplyr::rename(ED_transcomp = Q42) %>%
+  dplyr::rename(behav_ever = Q48) %>%
+  dplyr::rename(behav_28 = Q50) %>%
+  dplyr::rename(limit_amount = Q74) %>%
+  dplyr::rename(long_periods = Q71_1) %>%
+  dplyr::rename(exclude = Q72) %>%
+  dplyr::rename(rules = Q73) %>%
+  dplyr::rename(overeat = Q75) %>%
+  dplyr::rename(vomit = Q76) %>%
+  dplyr::rename(laxatives = Q77) %>%
+  dplyr::rename(exercise = Q78) %>%
+  dplyr::rename(hormones = Q79) %>%
+  dplyr::rename(nonmed_trans = Q69) %>%
+  dplyr::rename(bathroom = Q43) %>%
+  dplyr::rename(clothes = Q44) %>%
+  dplyr::rename(messaging = Q45) %>%
+  dplyr::rename(part_community = Q92) %>%
+  dplyr::rename(community_support = Q21) %>%
+  dplyr::rename(age = Q1) %>%
+  dplyr::rename(race = Q2) %>%
+  dplyr::rename(lang = Q3) %>%
+  dplyr::rename(class = Q5) %>%
+  dplyr::rename(insurance = Q6) %>%
+  dplyr::rename(region = Q7) %>%
+  dplyr::rename(devo_environ = Q8) %>%
+  dplyr::rename(religion = Q9) %>%
+  dplyr::rename(attraction = Q13) %>%
+  dplyr::rename(edu = Q15) %>%
+  dplyr::rename(disability = Q4)
 ```
+
+```{r}
+renamed_columns$know_age <- as.numeric(renamed_columns$know_age)
+renamed_columns$transition_age <- as.numeric(renamed_columns$transition_age)
+renamed_columns %>% mutate(time_to_trans = transition_age - know_age)
+```
+
+```{r, revalue social support}
+#support <- c("Very Strongly Disagree", "Strongly Disagree", "Mildly #Disagree", "Neutral", "Mildly Agree", "Strongly Agree", "Very Strongly #Disagree")
+
+#recode(renamed_columns:Q89, 'Very Strongly Disagree'=1)
+
+replacements <- data.frame(from = c("Very Strongly Disagree", "Strongly Disagree", "Mildly Disagree", "Neutral", "Mildly Agree", "Strongly Agree", "Very Strongly Disagree"), to = c(1, 2, 3, 4, 5, 6, 7))
+
+support_recode <- FindReplace(data = renamed_columns, Var = 'Q89_1', replaceData = replacements, from = "from", to = "to", exact = FALSE)
+
+```
+mapvalues(renamed_columns, from = c("Very Strongly Disagree", "Strongly Disagree", "Mildly Disagree", "Neutral", "Mildly Agree", "Strongly Agree", "Very Strongly Disagree"), to = c(1, 2, 3, 4, 5, 6, 7))
+
+
+
+
+
 
