--- a/survey_analysis.Rmd
+++ b/survey_analysis.Rmd
@@ -15,92 +15,141 @@ library(formattable)
 library(gridExtra)
 clean_survey <- read_csv("~/Documents/Trans_ED_Research/Trans ED Research/cleaned_survey.csv")
 ```
-```{r, ED_BIN graphs}
+```{r, other}
+clean_clothes_survey <- clean_survey %>%
+  filter(clothes != "missing")
+clean_EDtranscomp_survey <- clean_survey %>%
+  filter(ED_transcomp != "missing")
 
-ggplot(clean_survey, aes(x=trans, fill = ED_BIN)) + geom_bar()
-ggplot(clean_survey, aes(x=trans_sort, fill = ED_BIN)) + geom_bar()
+ggplot(clean_clothes_survey, aes(x=clothes, fill = ED_BIN)) + geom_bar()
+ggplot(clean_EDtranscomp_survey, aes(x=EDtranscomp)) + geom_bar()
+```
+
+
+```{r, ED_BIN graphs}
+clean_trans_survey <- clean_survey %>%
+  filter(trans != "missing")
+clean_sort_survey <- clean_survey %>%
+  filter(trans_sort != "N/A")
+clean_trans_score_survey <- clean_survey %>%
+  filter(trans_score != 0)
+clean_SO_survey <- clean_survey %>%
+  filter(SO_score != 0)
+clean_Fam_survey <- clean_survey %>%
+  filter(Fam_score != 0)
+clean_Fri_survey <- clean_survey %>%
+  filter(Fri_score != 0)
+clean_Total_survey <- clean_survey %>%
+  filter(Total_score != 0)
+clean_disc_survey <- clean_survey %>%
+  filter(disc_score != 0)
+clean_reject_survey <- clean_survey %>%
+  filter(reject_score != 0)
+clean_vict_survey <- clean_survey %>%
+  filter(vict_score != 0)
+clean_years_survey <- clean_survey %>%
+  filter(years_to_trans >= 0)
+clean_pride_survey <- clean_survey %>%
+  filter(pride != "missing")
+clean_attraction_survey <- clean_survey %>%
+  filter(attraction != "missing")
+
+ggplot(clean_trans_survey, aes(x=trans, fill = ED_BIN)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=trans_sort, fill = ED_BIN)) + geom_bar()
 ggplot(clean_survey, aes(x=sex, fill = ED_BIN)) + geom_bar()
 ggplot(clean_survey, aes(x=psych_BIN, fill = ED_BIN)) + geom_bar()
-ggplot(clean_survey, aes(x=ED_BIN, y=trans_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=ED_BIN, y=SO_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=ED_BIN, y=Fam_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=ED_BIN, y=Fri_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=ED_BIN, y=Total_score)) + geom_boxplot()
+ggplot(clean_pride_survey, aes(x=pride, fill = ED_BIN)) + geom_bar() + theme(axis.text.x=element_text(angle = -90, hjust = 0))
+ggplot(clean_trans_score_survey, aes(x=ED_BIN, y=trans_score)) + geom_boxplot()
+ggplot(clean_SO_survey, aes(x=ED_BIN, y=SO_score)) + geom_boxplot()
+ggplot(clean_Fam_survey, aes(x=ED_BIN, y=Fam_score)) + geom_boxplot()
+ggplot(clean_Fri_survey, aes(x=ED_BIN, y=Fri_score)) + geom_boxplot()
+ggplot(clean_Total_survey, aes(x=ED_BIN, y=Total_score)) + geom_boxplot()
+ggplot(clean_disc_survey, aes(x=ED_BIN, y=disc_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=ED_BIN, y=disc_score)) + geom_boxplot()
+ggplot(clean_reject_survey, aes(x=ED_BIN, y=reject_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=ED_BIN, y=reject_score)) + geom_boxplot()
+ggplot(clean_vict_survey, aes(x=ED_BIN, y=vict_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=ED_BIN, y=vict_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=ED_BIN, y=years_to_trans)) + geom_boxplot()
+ggplot(clean_years_survey, aes(x=ED_BIN, y=years_to_trans)) + geom_boxplot()
 
+ggplot(clean_attraction_survey, aes(x=attraction, fill=ED_BIN)) + geom_bar()
 ```
 
 ```{r, DE_BIN graphs}
+clean_stress_survey <- clean_survey %>%
+  filter(stress != "missing")
+clean_nonaffirm_survey <- clean_survey %>%
+  filter(nonaffirm != "missing")
+
 ggplot(clean_survey, aes(x=future_affirm_BIN, fill = DE_BIN)) + geom_bar()
-ggplot(clean_survey, aes(x=DE_BIN, y=trans_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=DE_BIN, y=SO_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=DE_BIN, y=Fam_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=DE_BIN, y=Fri_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=DE_BIN, y=Total_score)) + geom_boxplot()
+ggplot(clean_trans_score_survey, aes(x=DE_BIN, y=trans_score)) + geom_boxplot()
+ggplot(clean_SO_survey, aes(x=DE_BIN, y=SO_score)) + geom_boxplot()
+ggplot(clean_Fam_survey, aes(x=DE_BIN, y=Fam_score)) + geom_boxplot()
+ggplot(clean_Fri_survey, aes(x=DE_BIN, y=Fri_score)) + geom_boxplot()
+ggplot(clean_Total_survey, aes(x=DE_BIN, y=Total_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=disc_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=reject_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=vict_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=current_disc_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=current_reject_score)) + geom_boxplot()
 ggplot(clean_survey, aes(x=DE_BIN, y=current_vict_score)) + geom_boxplot()
-ggplot(clean_survey, aes(x=DE_BIN, y=years_to_trans)) + geom_boxplot()
-ggplot(clean_survey, aes(x=stress, fill = DE_BIN)) + geom_bar()
+ggplot(clean_years_survey, aes(x=DE_BIN, y=years_to_trans)) + geom_boxplot()
+ggplot(clean_stress_survey, aes(x=stress, fill = DE_BIN)) + geom_bar()
+ggplot(clean_stress_survey, aes(x=nonaffirm, fill = DE_BIN)) + geom_bar() + theme(axis.text.x=element_text(angle = -90, hjust = 0))
+
 
 ```
 
 ```{r, function graphs}
 #each func by trans y/n and enby/fem/masc
-ggplot(clean_survey, aes(x=lose_weight, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=lose_weight, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=change_shape, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=change_shape, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=increase_muscle, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=increase_muscle, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=decrease_muscle, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=decrease_muscle, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=curves_bigger, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=curves_bigger, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=curves_smaller, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=curves_smaller, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=society_weight, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=society_weight, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=society_shape, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=society_shape, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=society_gender, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=society_gender, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=attractive, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=attractive, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=weight_sport, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=weight_sport, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=body_sport, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=body_sport, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=dysphoria, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=dysphoria, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=passing_comfort, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=passing_comfort, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=passing_safety, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=passing_safety, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=no_hormones, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=no_hormones, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=no_surgery, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=no_surgery, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=no_periods, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=no_periods, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=anxiety, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=anxiety, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=depression, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=depression, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=trauma, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=trauma, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=numb_pain, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=numb_pain, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=control, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=control, fill = trans_sort)) + geom_bar()
-ggplot(clean_survey, aes(x=compulsion, fill = trans)) + geom_bar()
-ggplot(clean_survey, aes(x=compulsion, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=lose_weight, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=lose_weight, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=change_shape, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=change_shape, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=increase_muscle, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=increase_muscle, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=decrease_muscle, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=decrease_muscle, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=curves_bigger, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=curves_bigger, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=curves_smaller, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=curves_smaller, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=society_weight, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=society_weight, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=society_shape, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=society_shape, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=society_gender, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=society_gender, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=attractive, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=attractive, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=weight_sport, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=weight_sport, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=body_sport, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=body_sport, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=dysphoria, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=dysphoria, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=passing_comfort, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=passing_comfort, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=passing_safety, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=passing_safety, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=no_hormones, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=no_hormones, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=no_surgery, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=no_surgery, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=no_periods, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=no_periods, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=anxiety, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=anxiety, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=depression, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=depression, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=trauma, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=trauma, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=numb_pain, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=numb_pain, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=control, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=control, fill = trans_sort)) + geom_bar()
+ggplot(clean_trans_survey, aes(x=compulsion, fill = trans)) + geom_bar()
+ggplot(clean_sort_survey, aes(x=compulsion, fill = trans_sort)) + geom_bar()
 
 
 
